# ForensicSex

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  hyperparams.json  pyproject.toml
grad-cam/: Grad-CAM.ipynb
notebooks/: visualise_data_augmentation.ipynb
src/: train.py  train_cross_validation.py
