[project]
name = "forensic"
version = "0.1.0"
description = "Azure ML pipelines for Forensic Sex Identification"
authors = [{name = "Shamus Sim"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "numpy>=1.23",
    "ipykernel>=6.29.3",
    "scikit-learn>=1.3",
    "pandas>=2.2.1",
    "openpyxl>=3.1.2",
    "fuzzywuzzy>=0.18.0",
    "seaborn>=0.13.2",
    "opencv-python>=4.9.0.80",
    "python-dotenv>=1.0.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
azure = [
    "azure-ai-ml==1.14.0",
    "azureml-widgets>=1.55",
    "azureml-train>=1.59.0",
    "azureml-core>=1.59.0.post1",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
